Add documentation for nodes files list endpoint

--- a/swagger-spec/nodes/files_list.yaml
+++ b/swagger-spec/nodes/files_list.yaml
@@ -3,8 +3,8 @@
 get:
   summary: List all node files
   description: >-
-    List of all the files and folders that are attached to your project
-    for the given storage provider.
+    List of all the files/folders that are attached to your project
+    for a given storage provider.
 
     ####Returns
 
@@ -17,6 +17,69 @@ get:
 
     The `links` key contains a dictionary of links that can be used for [pagination](#Introduction_pagination).
 
+
+    ####Filtering
+
+
+    You can optionally request that the response only include nodes that match your filters by utilizing the `filter` query parameter, e.g.
+    https://api.osf.io/v2/nodes/?filter[title]=reproducibility
+
+
+    Node files may be filtered by `id`, `name`, `node`, `kind`, `path`, `provider`, `size`, and `last_touched`.
+
+
+    ###Waterbutler API actions
+
+
+    Files can be modified through the Waterbutler API routes found in `links` (`new_folder`, `move`, `upload`, `download`, and `delete`).
+
+
+    #### Download (files)
+
+
+    To download a file, issue a GET request against the download link. The response will have the Content-Disposition header set, which will will trigger a download in a browser.
+
+
+    #### Create Subfolder (folders)
+
+
+    You can create a subfolder of an existing folder by issuing a PUT request against the new_folder link. The ?kind=folder portion of the query parameter is already included in the new_folder link. The name of the new subfolder should be provided in the name query parameter. The response will contain a WaterButler folder entity. If a folder with that name already exists in the parent directory, the server will return a 409 Conflict error response.
+
+
+    #### Upload New File (folders)
+
+
+    To upload a file to a folder, issue a PUT request to the folder's upload link with the raw file data in the request body, and the kind and name query parameters set to 'file' and the desired name of the file. The response will contain a WaterButler file entity that describes the new file. If a file with the same name already exists in the folder, the server will return a 409 Conflict error response.
+
+
+    #### Update Existing File (file)
+
+
+    To update an existing file, issue a PUT request to the file's upload link with the raw file data in the request body and the kind query parameter set to "file". The update action will create a new version of the file. The response will contain a WaterButler file entity that describes the updated file.
+
+
+    #### Rename (files, folders)
+
+
+    To rename a file or folder, issue a POST request to the move link with the action body parameter set to "rename" and the rename body parameter set to the desired name. The response will contain either a folder entity or file entity with the new name.
+
+
+    #### Move & Copy (files, folders)
+
+
+    Move and copy actions both use the same request structure, a POST to the move url, but with different values for the action body parameters. The path parameter is also required and should be the OSF path attribute of the folder being written to. The rename and conflict parameters are optional. If you wish to change the name of the file or folder at its destination, set the rename parameter to the new name. The conflict param governs how name clashes are resolved. Possible values are replace and keep. replace is the default and will overwrite the file that already exists in the target folder. keep will attempt to keep both by adding a suffix to the new file's name until it no longer conflicts. The suffix will be ' (x)' where x is a increasing integer starting from 1. This behavior is intended to mimic that of the OS X Finder. The response will contain either a folder entity or file entity with the new name.
+
+    Files and folders can also be moved between nodes and providers. The resource parameter is the id of the node under which the file/folder should be moved. It must agree with the path parameter, that is the path must identify a valid folder under the node identified by resource. Likewise, the provider parameter may be used to move the file/folder to another storage provider, but both the resource and path parameters must belong to a node and folder already extant on that provider. Both resource and provider default to the current node and providers.
+
+    If a moved/copied file is overwriting an existing file, a 200 OK response will be returned. Otherwise, a 201 Created will be returned.
+
+
+    #### Delete (file, folders)
+
+
+    To delete a file or folder send a DELETE request to the delete link. Nothing will be returned in the response body.
+
+
   parameters:
 
     - in: path
@@ -26,7 +89,7 @@ get:
       description: 'The unique identifier of the node.'
 
     - in: path
-      name: provider_id
+      name: provider
       type: string
       required: true
       description: 'The unique identifier of the storage provider.'
@@ -98,5 +161,5 @@ get:
             prev: null
             next: null
             meta: null
-              total: 1
-              per_page: 10
+            total: 1
+            per_page: 10
