--- a/swagger-spec/nodes/identifiers_list.yaml
+++ b/swagger-spec/nodes/identifiers_list.yaml
@@ -2,7 +2,7 @@
 get:
   summary: List all identifiers
   description: >-
-    List all identifiers associated with the given node.
+    List all identifiers associated with a given node.
 
     ####Returns
 
@@ -10,17 +10,17 @@ get:
 
 
     The `data` key contains an array of identifiers.
-    Each resource in the array is a separate identifier object and contains the full representation of the identifier, meaning additional requests to a identifier's detail view are not necessary.
+    Each resource in the array is a separate identifier object.
 
 
     The `links` key contains a dictionary of links that can be used for [pagination](#Introduction_pagination).
 
     ####Filtering
 
-    You can optionally request that the response only include registrations that match your filters by utilizing the `filter` query parameter, e.g.
-    https://api.osf.io/v2/institutions/cos/registrations?filter[title]=science.
+    You can optionally request that the response only include nodes that match your filters by utilizing the `filter` query parameter, e.g.
+    https://api.osf.io/v2/nodes/?filter[title]=reproducibility
 
-    Institutions may be filtered by their `category` e.g `ark`,`doi`.
+    Identifiers may be filtered by their `category` e.g `ark` or `doi`.
 
   parameters:
 
@@ -33,7 +33,7 @@ get:
   tags:
     - Nodes
   operationId: nodes_identifiers_list
-  x-response-schema: 'Identifier'
+  x-response-schema: Identifier
   responses:
     '200':
       description: 'OK'
@@ -71,10 +71,10 @@ get:
             type: identifiers
             id: 57f1641db83f6901ed94b45a
           links:
-            first: null
-            last: null
-            prev: null
-            next: null
-            meta: null
-              total: 2
-              per_page: 10
+            first:
+            last:
+            prev:
+            next:
+            meta:
+            total: 2
+            per_page: 10
