--- a/swagger-spec/nodes/institutions_list.yaml
+++ b/swagger-spec/nodes/institutions_list.yaml
@@ -62,11 +62,69 @@ get:
                 to increase inclusivity and transparency of research. Find out more at <a href="https://cos.io">cos.io</a>.
             type: institutions
             id: cos
+          - relationships:
+              nodes:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/institutions/uva/nodes/
+                    meta: {}
+              users:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/institutions/uva/users/
+                    meta: {}
+              registrations:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/institutions/uva/registrations/
+                    meta: {}
+            links:
+              self: https://api.osf.io/v2/institutions/uva/
+            attributes:
+              auth_url: https://accounts.osf.io/Shibboleth.sso/Login?entityID=urn%3Amace%3Aincommon%3Avirginia.edu
+              logo_path: "/static/img/institutions/shields/uva-shield.png"
+              name: University of Virginia
+              description: In partnership with the <a href="http://www.virginia.edu/vpr/">Vice
+                President for Research</a>, <a href="http://dsi.virginia.edu">Data Science Institute</a>,
+                <a href="https://www.hsl.virginia.edu">Health Sciences Library</a>, and <a href="http://data.library.virginia.edu">University
+                Library</a>. Learn more about <a href="http://cadre.virginia.edu">UVA resources
+                for computational and data-driven research</a>. Projects must abide by the <a
+                href="http://www.virginia.edu/informationpolicy/security.html">University Security
+                and Data Protection Policies</a>.
+            type: institutions
+            id: uva
+          - relationships:
+              nodes:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/institutions/ljaf/nodes/
+                    meta: {}
+              users:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/institutions/ljaf/users/
+                    meta: {}
+              registrations:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/institutions/ljaf/registrations/
+                    meta: {}
+            links:
+              self: https://api.osf.io/v2/institutions/ljaf/
+            attributes:
+              auth_url:
+              logo_path: "/static/img/institutions/shields/ljaf-shield.png"
+              name: Laura and John Arnold Foundation
+              description: Projects listed below are for grants awarded by the Foundation. Please
+                see the <a href="http://www.arnoldfoundation.org/wp-content/uploads/Guidelines-for-Investments-in-Research.pdf">LJAF
+                Guidelines for Investments in Research</a> for more information and requirements.
+            type: institutions
+            id: ljaf
           links:
             first:
             last:
             prev:
             next:
             meta:
-              total: 1
+              total: 3
               per_page: 10
