--- a/swagger-spec/nodes/logs_list.yaml
+++ b/swagger-spec/nodes/logs_list.yaml
@@ -21,8 +21,8 @@ get:
 
     ####Filtering
 
-    You can optionally request that the response only include nodes that match your filters by utilizing the `filter` query parameter, e.g.
-    https://api.osf.io/v2/nodes/?filter[title]=reproducibility.
+    You can optionally request that the response only include logs that match your filters by utilizing the `filter` query parameter, e.g.
+    https://api.osf.io/v2/nodes/?filter[action]=made_private.
 
     Nodes may be filtered by their `action`, and `date`.
 
@@ -52,259 +52,295 @@ get:
               node:
                 links:
                   related:
-                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    href: https://api.osf.io/v2/nodes/fejxb/
                     meta: {}
               original_node:
                 links:
                   related:
-                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    href: https://api.osf.io/v2/nodes/fejxb/
                     meta: {}
               user:
                 links:
                   related:
-                    href: http://api.osf.io/v2/users/4xpu9/
+                    href: https://api.osf.io/v2/users/2z47w/
                     meta: {}
               linked_node:
                 links:
                   related:
-                    href: http://api.osf.io/v2/nodes/6q49d/
+                    href: https://api.osf.io/v2/nodes/iraqy/
                     meta: {}
             links:
-              self: http://api.osf.io/v2/logs/58d288c2a170c50017124d72/
+              self: https://api.osf.io/v2/logs/58862f8f594d9001f547f484/
             attributes:
-              date: '2017-03-22T14:22:58.019844'
+              date: '2017-01-23T16:30:07.321000'
               action: pointer_created
               params:
                 preprint_provider:
                 params_node:
-                  id: gaz5n
-                  title: 'Awesome Project 1'
+                  id: fejxb
+                  title: Replication of Correll (2008, JPSP, Study 2)
                 pointer:
-                  url: "/6q49d/"
+                  url: "/iraqy/"
                   category: project
-                  id: 6q49d
-                  title: 'Awesome Project 2'
+                  id: iraqy
+                  title: 'Independent Direct Replication #2 of Correll (2008, JPSP, Study 2)'
                 params_project:
                 contributors: []
             type: logs
-            id: 58d288c2a170c50017124d72
+            id: 58862f8f594d9001f547f484
           - relationships:
               node:
                 links:
                   related:
-                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    href: https://api.osf.io/v2/nodes/rtjws/
                     meta: {}
               original_node:
                 links:
                   related:
-                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    href: https://api.osf.io/v2/nodes/rtjws/
+                    meta: {}
+            links:
+              self: https://api.osf.io/v2/logs/5873190554be8101d7e30b3e/
+            attributes:
+              date: '2017-01-09T05:00:53.761000'
+              action: project_registered
+              params:
+                preprint_provider:
+                params_node:
+                  id: rtjws
+                  title: Analysis Audit
+                params_project:
+                contributors: []
+            type: logs
+            id: 5873190554be8101d7e30b3e
+          - relationships:
+              node:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/nodes/rye76/
+                    meta: {}
+              original_node:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/nodes/rye76/
+                    meta: {}
+            links:
+              self: https://api.osf.io/v2/logs/5873190554be8101d7e30b3d/
+            attributes:
+              date: '2017-01-09T05:00:53.699000'
+              action: project_registered
+              params:
+                preprint_provider:
+                params_node:
+                  id: rye76
+                  title: Data
+                params_project:
+                contributors: []
+            type: logs
+            id: 5873190554be8101d7e30b3d
+          - relationships:
+              node:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/nodes/62knn/
+                    meta: {}
+              original_node:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/nodes/62knn/
+                    meta: {}
+            links:
+              self: https://api.osf.io/v2/logs/5873190554be8101d7e30b3c/
+            attributes:
+              date: '2017-01-09T05:00:53.524000'
+              action: project_registered
+              params:
+                preprint_provider:
+                params_node:
+                  id: 62knn
+                  title: Study Materials
+                params_project:
+                contributors: []
+            type: logs
+            id: 5873190554be8101d7e30b3c
+          - relationships:
+              node:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/nodes/i29mh/
+                    meta: {}
+              original_node:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/nodes/i29mh/
+                    meta: {}
+            links:
+              self: https://api.osf.io/v2/logs/5873190554be8101d7e30b3b/
+            attributes:
+              date: '2017-01-09T05:00:53.390000'
+              action: project_registered
+              params:
+                preprint_provider:
+                params_node:
+                  id: i29mh
+                  title: Replication of Vohs &amp; Schooler (2008, PS, Study 1)
+                params_project:
+                contributors: []
+            type: logs
+            id: 5873190554be8101d7e30b3b
+          - relationships:
+              node:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/nodes/i29mh/
+                    meta: {}
+              original_node:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/nodes/i29mh/
+                    meta: {}
+            links:
+              self: https://api.osf.io/v2/logs/5873190554be8101d7e30b3a/
+            attributes:
+              date: '2017-01-09T05:00:53.314000'
+              action: registration_approved
+              params:
+                preprint_provider:
+                params_node:
+                  id: i29mh
+                  title: Replication of Vohs &amp; Schooler (2008, PS, Study 1)
+                params_project:
+                contributors: []
+            type: logs
+            id: 5873190554be8101d7e30b3a
+          - relationships:
+              node:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/nodes/i29mh/
+                    meta: {}
+              original_node:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/nodes/i29mh/
                     meta: {}
               user:
                 links:
                   related:
-                    href: http://api.osf.io/v2/users/4xpu9/
+                    href: https://api.osf.io/v2/users/fkn2j/
                     meta: {}
             links:
-              self: http://api.osf.io/v2/logs/58d274b3a170c5003edaa25e/
+              self: https://api.osf.io/v2/logs/586fc1676c613b01fdac5cad/
             attributes:
-              date: '2017-03-22T12:57:23.350451'
+              date: '2017-01-06T16:10:15.302000'
               action: registration_initiated
               params:
                 preprint_provider:
                 params_node:
-                  id: gaz5n
-                  title: 'Awesome Project 1'
+                  id: i29mh
+                  title: Replication of Vohs &amp; Schooler (2008, PS, Study 1)
                 params_project:
                 contributors: []
             type: logs
-            id: 58d274b3a170c5003edaa25e
+            id: 586fc1676c613b01fdac5cad
           - relationships:
               node:
                 links:
                   related:
-                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    href: https://api.osf.io/v2/nodes/i29mh/
                     meta: {}
               original_node:
                 links:
                   related:
-                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    href: https://api.osf.io/v2/nodes/i29mh/
                     meta: {}
               user:
                 links:
                   related:
-                    href: http://api.osf.io/v2/users/4xpu9/
+                    href: https://api.osf.io/v2/users/fkn2j/
                     meta: {}
             links:
-              self: http://api.osf.io/v2/logs/58d164a5a170c50025baae74/
+              self: https://api.osf.io/v2/logs/584e2eed54be8101d4e1bc64/
             attributes:
-              date: '2017-03-21T17:36:37.797687'
-              action: addon_added
+              date: '2016-12-12T05:00:29.122000'
+              action: retraction_approved
               params:
                 preprint_provider:
                 params_node:
-                  id: gaz5n
-                  title: 'Awesome Project 1'
+                  id: i29mh
+                  title: Replication of Vohs &amp; Schooler (2008, PS, Study 1)
                 params_project:
                 contributors: []
-                addon: Box
             type: logs
-            id: 58d164a5a170c50025baae74
+            id: 584e2eed54be8101d4e1bc64
           - relationships:
               node:
                 links:
                   related:
-                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    href: https://api.osf.io/v2/nodes/i29mh/
                     meta: {}
               original_node:
                 links:
                   related:
-                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    href: https://api.osf.io/v2/nodes/i29mh/
                     meta: {}
               user:
                 links:
                   related:
-                    href: http://api.osf.io/v2/users/4xpu9/
+                    href: https://api.osf.io/v2/users/fkn2j/
                     meta: {}
             links:
-              self: http://api.osf.io/v2/logs/58d16465a170c50025baae72/
+              self: https://api.osf.io/v2/logs/584ac51b594d90020056055a/
             attributes:
-              date: '2017-03-21T17:35:33.615228'
-              action: addon_added
+              date: '2016-12-09T14:52:11.219000'
+              action: retraction_initiated
               params:
                 preprint_provider:
                 params_node:
-                  id: gaz5n
-                  title: 'Awesome Project 1'
+                  id: i29mh
+                  title: Replication of Vohs &amp; Schooler (2008, PS, Study 1)
                 params_project:
                 contributors: []
-                addon: Dropbox
             type: logs
-            id: 58d16465a170c50025baae72
+            id: 584ac51b594d90020056055a
           - relationships:
               node:
                 links:
                   related:
-                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    href: https://api.osf.io/v2/nodes/ezcuj/
                     meta: {}
               original_node:
                 links:
                   related:
-                    href: http://api.osf.io/v2/nodes/gaz5n/
+                    href: https://api.osf.io/v2/nodes/ezcuj/
                     meta: {}
               user:
                 links:
                   related:
-                    href: http://api.osf.io/v2/users/4xpu9/
+                    href: https://api.osf.io/v2/users/2zx63/
                     meta: {}
             links:
-              self: http://api.osf.io/v2/logs/58d037ea9190330010e8a35c/
+              self: https://api.osf.io/v2/logs/5849d46d9ad5a10202820acb/
             attributes:
-              date: '2017-03-20T20:13:30.599144'
-              action: made_private
+              date: '2016-12-08T21:45:17.058000'
+              action: affiliated_institution_added
               params:
                 preprint_provider:
                 params_node:
-                  id: gaz5n
-                  title: 'Awesome Project 1'
+                  id: ezcuj
+                  title: 'Reproducibility Project: Psychology'
                 params_project:
                 contributors: []
+                institution:
+                  id: ljaf
+                  name: Laura and John Arnold Foundation
             type: logs
-            id: 58d037ea9190330010e8a35c
-          - relationships:
-              node:
-                links:
-                  related:
-                    href: http://api.osf.io/v2/nodes/gaz5n/
-                    meta: {}
-              original_node:
-                links:
-                  related:
-                    href: http://api.osf.io/v2/nodes/gaz5n/
-                    meta: {}
-              user:
-                links:
-                  related:
-                    href: http://api.osf.io/v2/users/4xpu9/
-                    meta: {}
-            links:
-              self: http://api.osf.io/v2/logs/58d037db9190330010e8a35a/
-            attributes:
-              date: '2017-03-20T20:13:15.653576'
-              action: made_public
-              params:
-                preprint_provider:
-                params_node:
-                  id: gaz5n
-                  title: 'Awesome Project 1'
-                params_project:
-                contributors: []
-            type: logs
-            id: 58d037db9190330010e8a35a
-          - relationships:
-              node:
-                links:
-                  related:
-                    href: http://api.osf.io/v2/nodes/gaz5n/
-                    meta: {}
-              original_node:
-                links:
-                  related:
-                    href: http://api.osf.io/v2/nodes/gaz5n/
-                    meta: {}
-              user:
-                links:
-                  related:
-                    href: http://api.osf.io/v2/users/4xpu9/
-                    meta: {}
-            links:
-              self: http://api.osf.io/v2/logs/58d037d0a170c50025baae5c/
-            attributes:
-              date: '2017-03-20T20:13:04.896632'
-              action: edit_description
-              params:
-                preprint_provider:
-                params_node:
-                  id: gaz5n
-                  title: 'Awesome Project 1'
-                params_project:
-                contributors: []
-            type: logs
-            id: 58d037d0a170c50025baae5c
-          - relationships:
-              node:
-                links:
-                  related:
-                    href: http://api.osf.io/v2/nodes/gaz5n/
-                    meta: {}
-              original_node:
-                links:
-                  related:
-                    href: http://api.osf.io/v2/nodes/gaz5n/
-                    meta: {}
-              user:
-                links:
-                  related:
-                    href: http://api.osf.io/v2/users/4xpu9/
-                    meta: {}
-            links:
-              self: http://api.osf.io/v2/logs/58d037a19190330010e8a356/
-            attributes:
-              date: '2017-03-20T20:12:17.002426'
-              action: project_created
-              params:
-                preprint_provider:
-                params_node:
-                  id: gaz5n
-                  title: 'Awesome Project 1'
-                params_project:
-                contributors: []
-            type: logs
-            id: 58d037a19190330010e8a356
+            id: 5849d46d9ad5a10202820acb
           links:
-            first: null
-            last: null
-            prev: null
-            next: null
-            meta: null
-              total: 8
+            first:
+            last: https://api.osf.io/v2/nodes/ezcuj/logs/?page=540
+            prev:
+            next: https://api.osf.io/v2/nodes/ezcuj/logs/?page=2
+            meta:
+              total: 5392
               per_page: 10
