--- a/swagger-spec/nodes/view_only_links_list.yaml
+++ b/swagger-spec/nodes/view_only_links_list.yaml
@@ -103,10 +103,10 @@ get:
             type: view_only_links
             id: 58d13827a170c50025baae6e
           links:
-            first: null
-            last: null
-            prev: null
-            next: null
-            meta: null
+            first:
+            last:
+            prev:
+            next:
+            meta:
               total: 2
               per_page: 10
