--- a/swagger-spec/nodes/registrations_list.yaml
+++ b/swagger-spec/nodes/registrations_list.yaml
@@ -42,6 +42,7 @@ get:
         type: array
         items:
           $ref: '../registrations/definition.yaml'
+      # TODO: A better example from an actual OSF project.
       examples:
         application/json:
           data:
