Fix example link in list endpoint and add enum keys for identifiers categories

--- a/swagger-spec/identifiers/definition.yaml
+++ b/swagger-spec/identifiers/definition.yaml
@@ -17,8 +17,11 @@ properties:
     properties:
       category:
         type: string
+        enum:
+          - ark
+          - doi
         readOnly: true
-        description: 'category can be ark or doi'
+        description: 'The category of this identifier'
       value:
         type: string
         readOnly: true
