--- a/swagger-spec/identifiers/definition.yaml
+++ b/swagger-spec/identifiers/definition.yaml
@@ -21,7 +21,7 @@ properties:
           - ark
           - doi
         readOnly: true
-        description: 'The category of this identifier'
+        description: 'The category of the identifier'
       value:
         type: string
         readOnly: true
