Generalize type in the example body of comments definition

--- a/swagger-spec/comments/definition.yaml
+++ b/swagger-spec/comments/definition.yaml
@@ -109,9 +109,9 @@ example:
   data:
     type: comments
     attributes:
-      content: 'An excellent reply to your comment'
+      content: 'comment content'
     relationships:
       target:
         data:
-          type: 'comments'
-          id: '{comment_id}'
+          type: '{target_type}'
+          id: '{target_id}'
