--- a/swagger-spec/taxonomies/list.yaml
+++ b/swagger-spec/taxonomies/list.yaml
@@ -3,7 +3,7 @@ get:
   summary: List all taxonomies
   description: >-
 
-    A paginated list of all [PLOS taxonomies of subjects](http://journals.plos.org/plosone/browse/).
+    A paginated list of all [bepress disciplines taxonomies](https://www.bepress.com/wp-content/uploads/2016/12/Digital-Commons-Disciplines-taxonomy-2017-01.pdf).
 
     Note: this API endpoint is under active development, and is subject to change in the future.
 
@@ -24,12 +24,12 @@ get:
 
     #### Filtering
 
-    You can optionally request that the response only include subjects that
+    You can optionally request that the response only include taxonomies that
     match your filters by utilizing the `filter` query parameter, e.g.
-    https://api.osf.io/v2/preprints/?filter['id']='{subject_id}'.
+    https://api.osf.io/v2/taxonomies/?filter['id']='{taxonomy_id}'.
 
 
-    Subjects may be filtered by their `id`, `parents`, and `text`.
+    Taxonomies may be filtered by their `id`, `parents`, and `text`.
 
   tags:
     - Taxonomies
@@ -105,71 +105,11 @@ get:
               child_count: 0
             type: taxonomies
             id: 584240d854be81056ceca83c
-          - links:
-              self: https://api.osf.io/v2/taxonomies/584240d954be81056ceca83d/
-              parents:
-              - https://api.osf.io/v2/taxonomies/584240d954be81056ceca938/
-            attributes:
-              text: Other Educational Administration and Supervision
-              parents:
-              - text: Educational Administration and Supervision
-                id: 584240d954be81056ceca938
-              child_count: 0
-            type: taxonomies
-            id: 584240d954be81056ceca83d
-          - links:
-              self: https://api.osf.io/v2/taxonomies/584240d954be81056ceca83e/
-              parents:
-              - https://api.osf.io/v2/taxonomies/584240d954be81056ceca953/
-            attributes:
-              text: Russian Linguistics
-              parents:
-              - text: Slavic Languages and Societies
-                id: 584240d954be81056ceca953
-              child_count: 0
-            type: taxonomies
-            id: 584240d954be81056ceca83e
-          - links:
-              self: https://api.osf.io/v2/taxonomies/584240d954be81056ceca83f/
-              parents:
-              - https://api.osf.io/v2/taxonomies/584240d954be81056cecaa24/
-            attributes:
-              text: Medicinal Chemistry and Pharmaceutics
-              parents:
-              - text: Pharmacology, Toxicology and Environmental Health
-                id: 584240d954be81056cecaa24
-              child_count: 0
-            type: taxonomies
-            id: 584240d954be81056ceca83f
-          - links:
-              self: https://api.osf.io/v2/taxonomies/584240d954be81056ceca840/
-              parents:
-              - https://api.osf.io/v2/taxonomies/584240da54be81056cecac49/
-            attributes:
-              text: Poetry
-              parents:
-              - text: Creative Writing
-                id: 584240da54be81056cecac49
-              child_count: 0
-            type: taxonomies
-            id: 584240d954be81056ceca840
-          - links:
-              self: https://api.osf.io/v2/taxonomies/584240d954be81056ceca841/
-              parents:
-              - https://api.osf.io/v2/taxonomies/584240da54be81056cecab8f/
-            attributes:
-              text: Public Economics
-              parents:
-              - text: Economics
-                id: 584240da54be81056cecab8f
-              child_count: 0
-            type: taxonomies
-            id: 584240d954be81056ceca841
           links:
             first:
-            last: https://api.osf.io/v2/taxonomies/?page=122
+            last:
             prev:
-            next: https://api.osf.io/v2/taxonomies/?page=2
+            next:
             meta:
-            total: 1217
+            total: 5
             per_page: 10
