--- a/swagger-spec/nodes/addon_folder_list.yaml
+++ b/swagger-spec/nodes/addon_folder_list.yaml
@@ -29,7 +29,7 @@ get:
       description: 'The unique identifier of the node.'
     - in: path
       type: string
-      name: provider_id
+      name: provider
       required: true
       description: 'The unique identifier/name of the provider'
 
