--- a/swagger-spec/nodes/addons_list.yaml
+++ b/swagger-spec/nodes/addons_list.yaml
@@ -16,6 +16,13 @@ get:
 
     The `links` key contains a dictionary of links that can be used for [pagination](#Introduction_pagination).
 
+  parameters:
+  - in: path
+    type: string
+    name: node_id
+    required: true
+    description: 'The unique identifier of the node.'
+
   tags:
     - Nodes
   operationId: nodes_addons_list
@@ -35,26 +42,26 @@ get:
             attributes:
               folder_path:
               configured: false
-              external_account_id: null
-              folder_id: null
+              external_account_id:
+              folder_id:
               node_has_auth: false
             type: node_addons
             id: <provider_id>
           - links:
               self: http://api.osf.io/v2/nodes/gaz5n/addons/<another_provider_id>/
             attributes:
-              folder_path: null
+              folder_path:
               configured: false
-              external_account_id: null
-              folder_id: null
+              external_account_id:
+              folder_id:
               node_has_auth: false
             type: node_addons
             id: <another_provider_id>
           links:
-            first: null
-            last: null
-            prev: null
-            next: null
-            meta: null
-              total: 2
-              per_page: 10
+            first: 
+            last:
+            prev:
+            next:
+            meta:
+            total: 2
+            per_page: 10
