--- a/swagger-spec/nodes/files_list.yaml
+++ b/swagger-spec/nodes/files_list.yaml
@@ -12,7 +12,7 @@ get:
 
 
     The `data` key contains an array of files.
-    Each resource in the array is a separate file object and contains the full representation of the file, meaning additional requests to a file's detail view are not necessary.
+    Each resource in the array is a separate file object and contains the full representation of the file.
 
 
     The `links` key contains a dictionary of links that can be used for [pagination](#Introduction_pagination).
@@ -21,8 +21,8 @@ get:
     ####Filtering
 
 
-    You can optionally request that the response only include nodes that match your filters by utilizing the `filter` query parameter, e.g.
-    https://api.osf.io/v2/nodes/?filter[title]=reproducibility
+    You can optionally request that the response only include files that match your filters by utilizing the `filter` query parameter, e.g.
+    https://api.osf.io/v2/nodes/ezcuj/files/osfstorage/?filter[kind]=file
 
 
     Node files may be filtered by `id`, `name`, `node`, `kind`, `path`, `provider`, `size`, and `last_touched`.
@@ -156,10 +156,10 @@ get:
             type: files
             id: 553e69248c5e4a219919ea54
           links:
-            first: null
-            last: null
-            prev: null
-            next: null
-            meta: null
+            first:
+            last:
+            prev:
+            next:
+            meta:
             total: 1
             per_page: 10
